FEAT(students): adds oauth

--- a/Students.Api/appsettings.json
+++ b/Students.Api/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "OAuth": {
+    "Protocol": "http",
+    "Host": "oauth",
+    "Port": "8080"
+  }
 }
