resolving importing error

--- a/Students.Infrastructure/Students.Infrastructure.csproj
+++ b/Students.Infrastructure/Students.Infrastructure.csproj
@@ -2,6 +2,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Students.Domain\Students.Domain.csproj" />
+    <ProjectReference Include="..\Students.Application\Students.Application.csproj" />
   </ItemGroup>
 
   <ItemGroup>
